alignment corrected

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,13 +2,14 @@
     display: flex;
     align-items: center;
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 .hero-container::after,
 .hero-container::before {
     content: " ";
     width: 28.125rem;
+    align-items: center;
     height: 28.125rem;
     border-radius: 28.125rem;
     background: rgb(124, 102, 227);
@@ -29,6 +30,10 @@
 
 .hero-content {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .hero-content h2 {
@@ -36,13 +41,16 @@
     font-weight: 600;
     line-height: 5rem;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .hero-content p {
-    width: 80%;
+    width: 100%;
     font-size: 1rem;
     font-weight: 400;
     line-height: 2rem;
+    align-items: center;
+    text-align:center;
 }
 
 .hero-img {
@@ -90,7 +98,7 @@
     transform: translateY(-0.5rem);
 }
 
-@media (max-width: 1025px) {
+@media (max-width: 1023px) {
     .hero-content h2 {
 
         font-size: 3rem;
@@ -102,12 +110,14 @@
 
         font-size: 0.9rem;
         line-height: 1.6rem;
+        align-items: center;
 
     }
 
     .hero-content{
-        margin-left: 40px;
+
         align-items: center;
+        justify-content: center;
     }
 
     .hero-img>div>img {
@@ -132,6 +142,7 @@
 @media (max-width: 768px) {
     .hero-container {
         flex-direction: column;
+        align-items: center;
     }
 
     .hero-img {
@@ -151,7 +162,7 @@
     .hero-content h2,
     .hero-content p,
     .hero-content a {
-        width: auto;
+
         text-align: center;
     }
 
@@ -183,6 +194,7 @@
     .hero-content p {
         font-size: 0.8rem;
         line-height: 1.3rem;
+        align-items: center;
     }
 
     .hero-img {
@@ -211,22 +223,22 @@
 .btns{
     display: flex;
     margin-top: 30px;
-    gap: 30px;
+    gap: 25px;
 }
 .resume{
-    font-size: 1rem;
+    font-size: 1.1rem;
+    width: 8rem;
+    height: 3rem;
     font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: center;
     color:#fff;
     background: Linear-gradient(90deg, #a993fe 0%,#7e61e7 100%);
-    padding: 0.6rem 0.2rem;
     border: none;
     outline: 1.5px solid transparent;
     border-radius: .5rem;
     cursor: pointer;
-    padding: 0.5rem 0.9rem;
     transition: all 0.3s ease-in-out;
 }
 
@@ -241,6 +253,8 @@
 .Contact{
     font-size: 1rem;
     font-weight: 500;
+    width: 8rem;
+    height: 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -254,7 +268,7 @@
     padding: 0.5rem 0.9rem;
     transition: all 0.3s ease-in-out;
 }
-.Contact:hover {    
+.Contact:hover {
     transition: all 0.3s ease-in-out;
     border: 1.5px solid #3d316a;
     background: rgba(5, 4, 9, 0.514);
